--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
                 <h1>Metric/Imperial Unit Conversion</h1>
                 <label for="input">enter number:</label>
                 <input 
-                    id="number",
-                    placeholder= "1",
-                    type="number",
+                    id="number"
+                    type="number"
                     name="input"
                     
                 >
