--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                     id="number"
                     type="number"
                     name="input"
+                    value="1"
                     
                 >
             </div>
